[gd_scene format=3 uid="uid://lightmode"]

[ext_resource type="Script" path="res://scripts/light_mode.gd" id="1_light"]
[ext_resource type="Texture2D" uid="uid://cfmpacohs3gw6" path="res://assets/main_menu.png" id="2_bg"]
[ext_resource type="FontFile" uid="uid://c2e7duja1spvc" path="res://assets/fonts/AmaticSC-Bold.ttf" id="3_font"]

[sub_resource type="FontVariation" id="FontVariation_bold"]
base_font = ExtResource("3_font")
variation_embolden = 0.8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.9)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_btn"]

[node name="LightMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_light")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 150.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PromptLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 64
text = "Apa warna asli benda ini?"
horizontal_alignment = 1

[node name="ConditionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 48
text = "Di tempat gelap..."
horizontal_alignment = 1

[node name="ObjectContainer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="ObjectRect" type="ColorRect" parent="CenterContainer/VBoxContainer/ObjectContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="LightOverlay" type="ColorRect" parent="CenterContainer/VBoxContainer/ObjectContainer"]
visible = false
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonsGrid" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="FeedbackLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 80
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 64
text = "Skor: 0"
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = SubResource("FontVariation_bold")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_btn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_btn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_btn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_btn")
text = "MENU UTAMA"

[connection signal="pressed" from="GameOverPanel/VBoxContainer/MenuButton" to="." method="_on_main_menu_button_pressed"]
